# burrow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile
scripts/: _deploy_common.sh  burrow-relay.service  deploy-client.sh  deploy-relay.sh  deploy-server.sh  netns-shell.sh  redeploy-win.sh
src/: bridge.rs  config.rs  config_gen.rs  control.rs  dns_service.rs  icmp.rs  lib.rs  main.rs  nat.rs  probe.rs  proxy.rs  relay.rs  reverse_registry.rs  rewrite.rs  runtime.rs  shell_handler.rs  shell_protocol.rs  smoltcp_iface.rs  spec.rs  test_helpers.rs  transport.rs  transport_wss.rs  tunnel.rs  udp_proxy.rs  udp_reverse.rs  wire.rs  yamux_bridge.rs
src/orchestration/: build.rs  exec.rs  gen.rs  mod.rs  ship.rs
src/orchestration/init/: editor.rs  emit.rs  mod.rs  ssh_alias.rs  state.rs  tui.rs
tests/: burrow_client_cli.rs  burrowctl_gen.rs  closed_port_returns_rst.rs  control_loopback.rs  dns_loopback.rs  handshake_loopback.rs  identifier_space_concurrent.rs  originated_outbound_tcp.rs  probe_error_classification.rs  reverse_tunnel_loopback.rs  shell_loopback.rs  smoltcp_lifecycle_race.rs  syn_collision_storm.rs  syn_scan_socket_reaped.rs  tcp_proxy_loopback.rs  transport_wss_loopback.rs  udp_proxy_loopback.rs  udp_reverse_tunnel.rs  wgnat_client_cli.rs
