[package]
name = "wgnat"
version = "0.1.0"
edition = "2021"
description = "WireGuard userspace NAT gateway - no TUN, no kernel drivers"
license = "BSD-3-Clause"

[dependencies]
boringtun = "0.7"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "io-util", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
anyhow = "1"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
smoltcp = { version = "0.13", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp", "socket-icmp"] }
socket2 = { version = "0.6", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
