[package]
name = "burrow"
version = "0.1.0"
edition = "2021"
description = "WireGuard userspace gateway - no TUN, no kernel drivers"
license = "BSD-3-Clause"
# `cargo run` would otherwise error since the package ships two
# binaries (`burrow` and `burrow-client`).
default-run = "burrow"

[dependencies]
boringtun = "0.7"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "io-util", "io-std", "fs", "signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
anyhow = "1"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
smoltcp = { version = "0.13", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp", "socket-icmp"] }
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
hickory-proto = { version = "0.24", default-features = false }
# Multiplexed substreams over the control flow for client-originated
# reverse tunnels (TCP + UDP). One burrow-client process holds one
# yamux connection per tunnel; the server opens an outbound substream
# per incoming peer flow.
yamux = "0.13"
futures = "0.3"
# Bridge yamux's `futures::io::AsyncRead/Write` to tokio's equivalents.
tokio-util = { version = "0.7", features = ["compat"] }
# Interactive shell: community fork of portable-pty with the modern
# Windows ConPTY flags (PSEUDOCONSOLE_RESIZE_QUIRK, WIN32_INPUT_MODE,
# PASSTHROUGH_MODE) that upstream portable-pty is missing.
# Cross-platform (Unix forkpty + Win ConPTY).
portable-pty = { package = "portable-pty-psmux", version = "0.9" }
# Client-side raw terminal + window-resize events.
crossterm = "0.28"
# Transport abstraction (UDP today, WSS for the server↔burrow leg). The
# trait lives in `src/transport.rs`; needs `async fn` in trait objects.
async-trait = "0.1"
# WSS transport: WebSocket client/server + TLS. `tokio-tungstenite`
# bundles `tungstenite` and an async-stream wrapper; the rustls feature
# pulls in `tokio-rustls` transitively but we depend on it directly so
# the relay binary can build a TLS server config without going through
# tungstenite's connector glue.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
# HTTP/1 server for the relay's WS upgrade handshake. Hyper 1.x is
# enough — we only have one route and don't want to pull in axum.
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[[bin]]
name = "burrow"
path = "src/main.rs"

[[bin]]
name = "burrow-client"
path = "src/bin/burrow-client.rs"

[[bin]]
name = "burrow-relay"
path = "src/bin/burrow-relay.rs"

[features]
# Bake the wg-quick config at $BURROW_EMBEDDED_CONFIG into the binary as a
# `&'static str`, so `burrow run` works without `--config`. Intended for
# "build once, deploy one self-contained binary" workflows. The PrivateKey
# ends up in the binary's read-only data segment — anyone with read access
# to the binary can extract it via `strings`, so don't ship the resulting
# binary to anyone you wouldn't trust with the .conf itself.
#
# Build with: `BURROW_EMBEDDED_CONFIG=./deploy.conf cargo build --release \
#                  --features embedded-config`
embedded-config = []

# Compile out all `tracing` events at any level in release builds (via
# tracing's `release_max_level_off` feature) and gate out the panic-hook's
# stderr printing. Pairs naturally with `embedded-config` for a deploy
# binary that emits nothing on stdout/stderr. Debug builds still log
# normally so `cargo test` output stays useful.
silent = ["tracing/release_max_level_off"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Console"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

# Deploy profile: aggressive size optimization. Pairs with `silent` +
# (optionally) `embedded-config` for a self-contained binary that emits
# nothing on stdout/stderr. `panic = "abort"` removes unwind tables —
# panics become immediate process exit instead of stack unwind.
#
# Source paths (from `unwrap`/`expect`/`assert!` panic locations) leak
# the build user's home dir + cargo registry hash if compiled vanilla.
# The `embed` justfile recipe sets RUSTFLAGS with `--remap-path-prefix`
# entries that rewrite those to short labels (`cargo`, `deps`, `src`).
# `trim-paths = "all"` would do this for free at the profile level but
# still requires nightly cargo as of 1.95.
[profile.min]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
